--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "type": "git",
     "url": "git+https://github.com/comp426-2023-spring/a03-silverdiamant.git"
   },
-  "author": "silverdiamant",
+  "author": "@silverdiamant",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/comp426-2023-spring/a03-silverdiamant/issues"
   },
   "homepage": "https://github.com/comp426-2023-spring/a03-silverdiamant#readme",
+  "bin": {
+    "node-rps": "./bin/rps-cli.js",
+    "node-rpsls": "./bin/rpsls-cli.js"
+  },
   "dependencies": {
     "minimist": "^1.2.8"
   }
