--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-rpsls",
   "version": "1.0.0",
   "description": "module-package",
-  "main": "index.js",
+  "main": "./lib/rpsls.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
